--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -7,9 +7,18 @@ defaults
   log global
   mode tcp
 
+frontend db_frontend
+  bind *:3306
+  default_backend db_backend
+
 frontend redis_frontend
   bind *:6379
   default_backend redis_backend
+
+backend db_backend
+  option mysql-check user haproxy
+  server mysql1 mysql1:3306 check inter 1s on-marked-up shutdown-backup-sessions
+  server mysql2 mysql2:3306 check inter 1s backup
 
 backend redis_backend
   option tcp-check
