--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,24 +1,18 @@
 global
-  log stdout format raw daemon
+  log stdout format raw local0
   stats socket /var/run/haproxy.sock mode 600 level admin
   stats timeout 2m
 
 defaults
   log global
   mode tcp
-
-frontend db_frontend
-  bind *:3306
-  default_backend db_backend
+  timeout client 1m
+  timeout connect 1m
+  timeout server 1m
 
 frontend redis_frontend
   bind *:6379
   default_backend redis_backend
-
-backend db_backend
-  option mysql-check user haproxy
-  server mysql1 mysql1:3306 check inter 1s on-marked-up shutdown-backup-sessions
-  server mysql2 mysql2:3306 check inter 1s backup
 
 backend redis_backend
   option tcp-check
@@ -28,5 +22,14 @@ backend redis_backend
   tcp-check expect string role:master
   tcp-check send QUIT\r\n
   tcp-check expect string +OK
-  server redis1 redis1:6379 check inter 1s on-marked-up shutdown-backup-sessions
-  server redis2 redis2:6379 check inter 1s backup
+  server redis1 redis1:6379 check inter 4s on-marked-down shutdown-sessions
+  server redis2 redis2:6379 check inter 4s on-marked-down shutdown-sessions
+
+# frontend db_frontend
+#   bind *:3306
+#   default_backend db_backend
+
+# backend db_backend
+#   option mysql-check user haproxy
+#   server mysql1 mysql1:3306 check inter 1s on-marked-up shutdown-backup-sessions
+#   server mysql2 mysql2:3306 check inter 1s backup
