--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: '3'
 services:
   haproxy:
     depends_on:
-      - mysql1
-      - mysql2
       - redis1
       - redis2
     image: haproxy
@@ -18,32 +16,20 @@ services:
     image: redis
     ports:
       - '6380:6379'
-  mysql1:
-    command: --default-authentication-plugin=mysql_native_password
-    image: mysql
-    ports:
-      - '3306:3306'
-    volumes:
-      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-      - ./master.cnf:/etc/mysql/conf.d/my.cnf
-    environment:
-      MYSQL_ROOT_PASSWORD: pwd
-  mysql2:
+  redis-sentinel:
+    entrypoint: bash -c 'cp /etc/redis/sentinel.conf.orig /etc/redis/sentinel.conf && redis-sentinel /etc/redis/sentinel.conf'
     depends_on:
-      - mysql1
-    environment:
-      MYSQL_ROOT_PASSWORD: pwd
-    image: mysql
+      - redis1
+      - redis2
+    image: redis
     ports:
-      - '3307:3306'
+      - '26379:26379'
     volumes:
-      - ./slave.cnf:/etc/mysql/conf.d/my.cnf
-      - ./start-slave.sh:/docker-entrypoint-initdb.d/start-slave.sh
+      - ./sentinel.conf:/etc/redis/sentinel.conf.orig
   app:
     build: .
     environment:
-      MYSQL_HOST: haproxy
-      MYSQL_PASSWORD: pwd
+      RAILS_MAX_THREADS: 1
       REDIS_HOST: haproxy
     ports:
       - "3000:3000"
